Added distance and calories update

--- a/app/src/main/res/layout/fragment_running.xml
+++ b/app/src/main/res/layout/fragment_running.xml
@@ -71,7 +71,7 @@
                 android:id="@+id/distance_display"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="DYSTANS"
+                android:text="0.0 km"
                 app:layout_constraintBottom_toTopOf="@+id/start_stop"
                 app:layout_constraintEnd_toStartOf="@+id/calories_display"
                 app:layout_constraintStart_toStartOf="@+id/guideline_left"
@@ -81,7 +81,7 @@
                 android:id="@+id/calories_display"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="KALORIE"
+                android:text="0 kcal"
                 app:layout_constraintBottom_toTopOf="@+id/start_stop"
                 app:layout_constraintEnd_toStartOf="@+id/guideline_right"
                 app:layout_constraintStart_toEndOf="@+id/distance_display"
