--- a/app/src/main/res/navigation/navigation.xml
+++ b/app/src/main/res/navigation/navigation.xml
@@ -7,7 +7,7 @@
 
     <fragment
         android:id="@+id/trainingFragment"
-        android:name="com.trainingapp.ui.TrainingFragment"
+        android:name="com.trainingapp.ui.fragments.TrainingFragment"
         android:label="fragment_training"
         tools:layout="@layout/fragment_training" >
         <action
@@ -16,7 +16,7 @@
     </fragment>
     <fragment
         android:id="@+id/runningFragment"
-        android:name="com.trainingapp.ui.RunningFragment"
+        android:name="com.trainingapp.ui.fragments.RunningFragment"
         android:label="RunningFragment" >
         <action
             android:id="@+id/action_runningFragment_to_trainingFragment"
