--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -2,4 +2,5 @@
 <resources>
     <dimen name="big_padding">16dp</dimen>
     <dimen name="normal_margin" />
+    <dimen name="big_margin">32dp</dimen>
 </resources>
