--- a/app/src/main/res/layout/fragment_training.xml
+++ b/app/src/main/res/layout/fragment_training.xml
@@ -19,7 +19,7 @@
             app:layout_constraintGuide_end="16dp"
             android:orientation="vertical"/>
 
-        <Button
+        <com.google.android.material.button.MaterialButton
             android:id="@+id/start_running_training_button"
             android:layout_width="0dp"
             android:layout_height="0dp"
@@ -29,24 +29,16 @@
             app:layout_constraintStart_toStartOf="@+id/guideline_left"
             app:layout_constraintTop_toTopOf="parent" />
 
-        <Button
+        <com.google.android.material.button.MaterialButton
             android:id="@+id/start_athome_training_button"
             android:layout_width="0dp"
             android:layout_height="0dp"
             android:text="@string/at_home_training_button"
-            app:layout_constraintBottom_toTopOf="@+id/bottom_navigation"
+            app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="@+id/guideline_right"
             app:layout_constraintStart_toStartOf="@+id/guideline_left"
             app:layout_constraintTop_toBottomOf="@+id/start_running_training_button" />
 
-        <com.google.android.material.bottomnavigation.BottomNavigationView
-            android:id="@+id/bottom_navigation"
-            style="@style/Widget.MaterialComponents.BottomNavigationView.Colored"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:menu="@menu/bottom_menu" />
+
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
