--- a/app/src/main/res/menu/top_menu.xml
+++ b/app/src/main/res/menu/top_menu.xml
@@ -1,14 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto">
+
     <item
-        android:id="@+id/training_menu_top"
-        android:icon="@drawable/baseline_person_24"
-        android:title="@string/bottom_menu_train"
-        />
-    <item
-        android:id="@+id/history_menu_top"
+        android:id="@+id/modifyAccountFragment"
         android:icon="@drawable/baseline_settings_24"
-        android:title="@string/bottom_menu_history"
+        android:title="Modify"
         />
 </menu>
