--- a/app/src/main/res/navigation/navigation.xml
+++ b/app/src/main/res/navigation/navigation.xml
@@ -16,8 +16,6 @@
     </fragment>
     <fragment
         android:id="@+id/runningFragment"
-        android:name="com.trainingapp.ui.RunningFragment"
-        android:label="RunningFragment"
         android:name="com.trainingapp.ui.fragments.RunningFragment"
         android:label="RunningFragment" >
         <action
@@ -26,29 +24,23 @@
     </fragment>
     <fragment
         android:id="@+id/historyFragment"
-        android:name="com.trainingapp.ui.HistoryFragment"
+        android:name="com.trainingapp.ui.fragments.HistoryFragment"
         android:label="HistoryFragment" />
     <fragment
         android:id="@+id/statisticsFragment"
-        android:name="com.trainingapp.ui.StatisticsFragment"
+        android:name="com.trainingapp.ui.fragments.StatisticsFragment"
         android:label="StatisticsFragment" />
     <fragment
         android:id="@+id/modifyAccountFragment"
-        android:name="com.trainingapp.ui.ModifyAccountFragment"
+        android:name="com.trainingapp.ui.fragments.ModifyAccountFragment"
         android:label="fragment_modify_account"
         tools:layout="@layout/fragment_modify_account" />
     <fragment
         android:id="@+id/loginFragment"
-        android:name="com.trainingapp.ui.LoginFragment"
+        android:name="com.trainingapp.ui.fragments.LoginFragment"
         android:label="LoginFragment" >
         <action
             android:id="@+id/action_loginFragment_to_trainingFragment"
-            app:destination="@id/trainingFragment" />
-    </fragment>
-        android:name="com.trainingapp.ui.fragments.RunningFragment"
-        android:label="RunningFragment" >
-        <action
-            android:id="@+id/action_runningFragment_to_trainingFragment"
             app:destination="@id/trainingFragment" />
     </fragment>
 </navigation>
