--- a/app/src/main/res/layout/fragment_statistics.xml
+++ b/app/src/main/res/layout/fragment_statistics.xml
@@ -25,7 +25,39 @@
             app:layout_constraintGuide_end="16dp"
             android:orientation="vertical"/>
 
+        <TextView
+            android:id="@+id/chartTitle"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:text="@string/distance_each_day"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintBottom_toTopOf="@+id/lineChart"
+            app:layout_constraintEnd_toEndOf="@+id/guideline_right"
+            app:layout_constraintStart_toStartOf="@+id/guideline_left"
+            app:layout_constraintVertical_chainStyle="spread"
+            app:layout_constraintVertical_weight="1"/>
 
+        <com.github.mikephil.charting.charts.LineChart
+            android:id="@+id/lineChart"
+            android:layout_width="0dp"
+            android:layout_height="0dp"
+            app:layout_constraintTop_toBottomOf="@+id/chartTitle"
+            app:layout_constraintBottom_toTopOf="@+id/test_text"
+            app:layout_constraintEnd_toEndOf="@+id/guideline_right"
+            app:layout_constraintStart_toStartOf="@+id/guideline_left"
+            app:layout_constraintVertical_chainStyle="spread"
+            app:layout_constraintVertical_weight="4"/>
+
+        <TextView
+            android:id="@+id/test_text"
+            android:layout_width="0dp"
+            android:layout_height="0dp"
+            app:layout_constraintTop_toBottomOf="@+id/lineChart"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="@+id/guideline_right"
+            app:layout_constraintStart_toStartOf="@+id/guideline_left"
+            app:layout_constraintVertical_chainStyle="spread"
+            app:layout_constraintVertical_weight="2"/>
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
