--- a/app/src/main/res/menu/top_menu.xml
+++ b/app/src/main/res/menu/top_menu.xml
@@ -5,6 +5,17 @@
     <item
         android:id="@+id/modifyAccountFragment"
         android:icon="@drawable/baseline_settings_24"
-        android:title="Modify"
+        android:title="@string/modify_account"
+        />
+    <item
+        android:id="@+id/changeAppearanceFragment"
+        android:icon="@drawable/baseline_settings_24"
+        android:title="@string/change_application_appearance"
+        />
+
+    <item
+        android:id="@+id/createNotificationFragment"
+        android:icon="@drawable/baseline_settings_24"
+        android:title="@string/set_notification"
         />
 </menu>
