--- a/app/src/main/res/layout/fragment_modify_account.xml
+++ b/app/src/main/res/layout/fragment_modify_account.xml
@@ -136,11 +136,23 @@
             style="@style/Widget.MaterialComponents.Button.TextButton"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintBottom_toTopOf="@+id/delete_account_button"
             app:layout_constraintTop_toBottomOf="@+id/register_button"
             app:layout_constraintStart_toStartOf="@+id/guideline_left"
             app:layout_constraintEnd_toEndOf="@+id/guideline_right"
             android:text="@string/button_back"
+            android:layout_marginBottom="@dimen/big_margin"/>
+
+        <com.google.android.material.button.MaterialButton
+            android:id="@+id/delete_account_button"
+            style="@style/Widget.MaterialComponents.Button.TextButton"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/back_button"
+            app:layout_constraintStart_toStartOf="@+id/guideline_left"
+            app:layout_constraintEnd_toEndOf="@+id/guideline_right"
+            android:text="@string/button_delete_account"
             android:layout_marginBottom="@dimen/big_margin"/>
 
     </androidx.constraintlayout.widget.ConstraintLayout>
