--- a/app/src/main/res/layout/fragment_modify_account.xml
+++ b/app/src/main/res/layout/fragment_modify_account.xml
@@ -122,7 +122,8 @@
             <com.google.android.material.textfield.TextInputEditText
                 android:id="@+id/old_password_input"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content" />
+                android:layout_height="wrap_content"
+                android:inputType="textPassword"/>
         </com.google.android.material.textfield.TextInputLayout>
 
         <com.google.android.material.button.MaterialButton
