--- a/app/src/main/res/values-night/styles.xml
+++ b/app/src/main/res/values-night/styles.xml
@@ -7,6 +7,20 @@
         <item name="colorAccent">@color/colorAccent</item>
     </style>
 
+    <!-- The default font for RecyclerView items is too small.
+    The margin is a simple delimiter between the words. -->
+    <style name="training_title">
+        <item name="android:paddingLeft">8dp</item>
+        <item name="android:background">@color/colorPrimary</item>
+        <item name="android:textAppearance">@android:style/TextAppearance.Large</item>
+    </style>
+
+    <style name="training_desc">
+        <item name="android:paddingLeft">8dp</item>
+        <item name="android:background">@color/colorPrimaryDark</item>
+        <item name="android:textAppearance">@android:style/TextAppearance.Large</item>
+    </style>
+
     <style name="Theme.Training_app" parent="Theme.MaterialComponents.DayNight.DarkActionBar">
         <!-- Primary brand color. -->
         <item name="colorPrimary">@color/purple_200</item>
