--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -12,13 +12,13 @@
     The margin is a simple delimiter between the words. -->
     <style name="training_title">
         <item name="android:paddingLeft">8dp</item>
-        <item name="android:background">@android:color/holo_blue_dark</item>
+        <item name="android:background">@color/grey</item>
         <item name="android:textAppearance">@android:style/TextAppearance.Large</item>
     </style>
 
     <style name="training_desc">
         <item name="android:paddingLeft">8dp</item>
-        <item name="android:background">@android:color/holo_blue_bright</item>
+        <item name="android:background">@color/white</item>
         <item name="android:textAppearance">@android:style/TextAppearance.Large</item>
     </style>
 
