--- a/app/src/main/res/values-night/styles.xml
+++ b/app/src/main/res/values-night/styles.xml
@@ -2,10 +2,12 @@
 <resources>
     <style name="AppTheme" parent="Theme.MaterialComponents.DayNight.NoActionBar">
         <!-- Customize your theme here. -->
-        <item name="colorPrimary">@color/colorPrimary</item>
-        <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
+        <item name="colorPrimary">@color/colorAccent</item>
+        <item name="colorPrimaryDark">@color/secondaryLightColorLight</item>
         <item name="colorAccent">@color/colorAccent</item>
+        <item name="android:background">@color/secondaryDarkColorLight</item>
     </style>
+
 
     <!-- The default font for RecyclerView items is too small.
     The margin is a simple delimiter between the words. -->
@@ -23,13 +25,13 @@
 
     <style name="Theme.Training_app" parent="Theme.MaterialComponents.DayNight.DarkActionBar">
         <!-- Primary brand color. -->
-        <item name="colorPrimary">@color/purple_200</item>
-        <item name="colorPrimaryVariant">@color/purple_700</item>
-        <item name="colorOnPrimary">@color/white</item>
+        <item name="colorPrimary">@color/secondaryColorLight</item>
+        <item name="colorPrimaryVariant">@color/secondaryLightColorLight</item>
+        <item name="colorOnPrimary">@color/primaryColorLight</item>
         <!-- Secondary brand color. -->
-        <item name="colorSecondary">@color/teal_200</item>
-        <item name="colorSecondaryVariant">@color/teal_200</item>
-        <item name="colorOnSecondary">@color/black</item>
+        <item name="colorSecondary">@color/secondaryDarkColorLight</item>
+        <item name="colorSecondaryVariant">@color/primaryLightColorLight</item>
+        <item name="colorOnSecondary">@color/secondaryLightColorLight</item>
         <!-- Status bar color. -->
         <item name="android:statusBarColor">?attr/colorPrimaryVariant</item>
         <!-- Customize your theme here. -->
