--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -6,6 +6,7 @@
         <item name="colorPrimary">@color/white</item>
         <item name="colorPrimaryDark">@color/white</item>
         <item name="colorAccent">@color/colorAccent</item>
+        <item name="android:background">@color/secondaryColorLight</item>
     </style>
 
     <!-- The default font for RecyclerView items is too small.
@@ -24,13 +25,13 @@
 
     <style name="Theme.Training_app" parent="Theme.MaterialComponents.Light.NoActionBar">
         <!-- Primary brand color. -->
-        <item name="colorPrimary">@color/white</item>
-        <item name="colorPrimaryVariant">@color/white</item>
-        <item name="colorOnPrimary">@color/black</item>
+        <item name="colorPrimary">@color/primaryDarkColorLight</item>
+        <item name="colorPrimaryVariant">@color/primaryLightColorLight</item>
+        <item name="colorOnPrimary">@color/secondaryDarkColorLight</item>
         <!-- Secondary brand color. -->
-        <item name="colorSecondary">@color/white</item>
-        <item name="colorSecondaryVariant">@color/white</item>
-        <item name="colorOnSecondary">@color/white</item>
+        <item name="colorSecondary">@color/secondaryDarkColorLight</item>
+        <item name="colorSecondaryVariant">@color/secondaryLightColorLight</item>
+        <item name="colorOnSecondary">@color/primaryColorLight</item>
         <!-- Status bar color. -->
         <item name="android:statusBarColor">?attr/colorPrimaryVariant</item>
         <!-- Customize your theme here. -->
