--- a/app/src/main/res/navigation/navigation.xml
+++ b/app/src/main/res/navigation/navigation.xml
@@ -62,13 +62,8 @@
             app:destination="@id/loginFragment" />
     </fragment>
     <fragment
-        android:id="@+id/changeAppearanceFragment"
-        android:name="com.trainingapp.ui.fragments.ChangeAppearanceFragment"
-        android:label="fragment_change_appearance"
-        tools:layout="@layout/fragment_change_appearance" />
-    <fragment
-        android:id="@+id/createNotificationFragment"
-        android:name="com.trainingapp.ui.fragments.CreateNotificationFragment"
-        android:label="fragment_create_notification"
-        tools:layout="@layout/fragment_create_notification" />
+        android:id="@+id/createReminderFragment"
+        android:name="com.trainingapp.ui.fragments.CreateReminderFragment"
+        android:label="fragment_create_reminder"
+        tools:layout="@layout/fragment_create_reminder" />
 </navigation>
