CreateReminder date/time pickers

--- a/app/src/main/res/navigation/navigation.xml
+++ b/app/src/main/res/navigation/navigation.xml
@@ -73,9 +73,8 @@
             app:destination="@id/trainingFragment" />
     </fragment>
     <fragment
-        android:id="@+id/createReminderFragment2"
+        android:id="@+id/createReminderFragment"
         android:name="com.trainingapp.ui.fragments.CreateReminderFragment"
-        android:label="fragment_create_reminder"
-        tools:layout="@layout/fragment_create_reminder" />
+        android:label="CreateReminderFragment" />
 
 </navigation>
