--- a/app/src/main/res/layout/fragment_at_home_training.xml
+++ b/app/src/main/res/layout/fragment_at_home_training.xml
@@ -26,11 +26,12 @@
                 android:orientation="vertical"
                 app:layout_constraintGuide_end="16dp" />
 
-            <com.google.android.material.textview.MaterialTextView
+            <com.google.android.material.imageview.ShapeableImageView
                 android:id="@+id/picture_of_exercise"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="PIC"
+                android:layout_width="250dp"
+                android:layout_height="240dp"
+                android:background="@color/white"
+                app:shapeAppearanceOverlay="@style/ShapeAppearanceOverlay.App.CornerSize10Percent"
                 app:layout_constraintBottom_toTopOf="@id/time_display"
                 app:layout_constraintEnd_toStartOf="@+id/guideline_right"
                 app:layout_constraintStart_toStartOf="@+id/guideline_left"
@@ -40,7 +41,7 @@
                 android:id="@+id/time_display"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="00:00:00"
+                android:text="@{atHomeTrainingViewModel.exerciseText}"
                 app:layout_constraintBottom_toTopOf="@+id/number_of_exercises_display"
                 app:layout_constraintEnd_toStartOf="@+id/guideline_right"
                 app:layout_constraintStart_toStartOf="@+id/guideline_left"
@@ -50,27 +51,27 @@
                 android:id="@+id/number_of_exercises_display"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="10"
-                app:layout_constraintBottom_toTopOf="@+id/start_stop"
-                app:layout_constraintEnd_toStartOf="@+id/calories_display"
+                android:text="@{atHomeTrainingViewModel.exerciseRepeats}"
+                app:layout_constraintBottom_toTopOf="@+id/next_exercise"
+                app:layout_constraintEnd_toStartOf="@+id/guideline_right"
                 app:layout_constraintStart_toStartOf="@+id/guideline_left"
                 app:layout_constraintTop_toBottomOf="@+id/time_display" />
 
-            <com.google.android.material.textview.MaterialTextView
-                android:id="@+id/calories_display"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="0 kcal"
-                app:layout_constraintBottom_toTopOf="@+id/start_stop"
-                app:layout_constraintEnd_toStartOf="@+id/guideline_right"
-                app:layout_constraintStart_toEndOf="@+id/number_of_exercises_display"
-                app:layout_constraintTop_toBottomOf="@+id/time_display" />
+<!--            <com.google.android.material.textview.MaterialTextView-->
+<!--                android:id="@+id/calories_display"-->
+<!--                android:layout_width="wrap_content"-->
+<!--                android:layout_height="wrap_content"-->
+<!--                android:text="0 kcal"-->
+<!--                app:layout_constraintBottom_toTopOf="@+id/next_exercise"-->
+<!--                app:layout_constraintEnd_toStartOf="@+id/guideline_right"-->
+<!--                app:layout_constraintStart_toEndOf="@+id/number_of_exercises_display"-->
+<!--                app:layout_constraintTop_toBottomOf="@+id/time_display" />-->
 
             <com.google.android.material.button.MaterialButton
-                android:id="@+id/start_stop"
+                android:id="@+id/next_exercise"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="START"
+                android:text="Next"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toStartOf="@+id/guideline_right"
                 app:layout_constraintStart_toStartOf="@+id/guideline_left" />
