--- a/app/src/main/res/layout/fragment_modify_account.xml
+++ b/app/src/main/res/layout/fragment_modify_account.xml
@@ -38,7 +38,8 @@
         <com.google.android.material.textfield.TextInputEditText
             android:id="@+id/weight_input"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content" />
+            android:layout_height="wrap_content"
+            android:inputType="numberDecimal"/>
         </com.google.android.material.textfield.TextInputLayout>
         <com.google.android.material.textfield.TextInputLayout
             android:id="@+id/height_text_input_layout"
@@ -53,8 +54,10 @@
         <com.google.android.material.textfield.TextInputEditText
             android:id="@+id/height_input"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content" />
+            android:layout_height="wrap_content"
+            android:inputType="numberDecimal"/>
         </com.google.android.material.textfield.TextInputLayout>
+
         <com.google.android.material.textfield.TextInputLayout
             android:id="@+id/username_text_input_layout"
             android:layout_width="0dp"
