--- a/app/src/main/res/values-night/styles.xml
+++ b/app/src/main/res/values-night/styles.xml
@@ -1,7 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
+    <attr name="logo_run" format="reference"/>
     <style name="AppTheme" parent="Theme.MaterialComponents.DayNight.NoActionBar">
         <!-- Customize your theme here. -->
+
         <item name="colorPrimary">@color/colorAccent</item>
         <item name="colorPrimaryDark">@color/secondaryLightColorLight</item>
         <item name="colorAccent">@color/colorAccent</item>
@@ -25,6 +27,7 @@
 
     <style name="Theme.Training_app" parent="Theme.MaterialComponents.DayNight.DarkActionBar">
         <!-- Primary brand color. -->
+        <item name="logo_run">@drawable/run_dark</item>
         <item name="colorPrimary">@color/secondaryColorLight</item>
         <item name="colorPrimaryVariant">@color/secondaryLightColorLight</item>
         <item name="colorOnPrimary">@color/primaryColorLight</item>
